[package]
name = "iota-pow-box"
version = "0.0.2"
authors = ["Nathan Jaremko <nathan@jaremko.ca>"]
description = "A remote PoW server written"
license = "MIT"
readme = "README.md"
keywords = ["iota"]
repository = "https://github.com/njaremko/iota-pow-box"

[dependencies]
iota-lib-rs = "0.0.25"
rocket = "0.3.14"
rocket_codegen = "0.3.14"
rocket_contrib = "0.3.14"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "1.0"
chashmap = "2.2"
chrono = "0.4"
uuid = "0.6"
failure = "0.1"
